RESOLVED FIXED157514
Fix the !ENABLE(SHADOW_DOM) && !ENABLE(DETAILS_ELEMENT) build
https://bugs.webkit.org/show_bug.cgi?id=157514
Summary Fix the !ENABLE(SHADOW_DOM) && !ENABLE(DETAILS_ELEMENT) build
Csaba Osztrogonác
Reported 2016-05-10 06:54:16 PDT
build log: ../../Source/WebCore/dom/Element.cpp:1516:25: error: 'class WebCore::ShadowRoot' has no member named 'hostChildElementDidChange' ../../Source/WebCore/dom/Element.cpp: In member function 'virtual void WebCore::Element::removedFrom(WebCore::ContainerNode&)': ../../Source/WebCore/dom/Element.cpp:1600:25: error: 'class WebCore::ShadowRoot' has no member named 'hostChildElementDidChange' hostChildElementDidChange is declared inside ENABLE(SHADOW_DOM) || ENABLE(DETAILS_ELEMENT) guard, we should use it inside the same if guard.
Attachments
Patch (1.80 KB, patch)
2016-05-10 06:56 PDT, Csaba Osztrogonác
no flags
Csaba Osztrogonác
Comment 1 2016-05-10 06:56:41 PDT
WebKit Commit Bot
Comment 2 2016-05-10 13:44:40 PDT
Comment on attachment 278489 [details] Patch Clearing flags on attachment: 278489 Committed r200642: <http://trac.webkit.org/changeset/200642>
WebKit Commit Bot
Comment 3 2016-05-10 13:44:44 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.