Fix the !ENABLE(SHADOW_DOM) && !ENABLE(DETAILS_ELEMENT) build https://bugs.webkit.org/show_bug.cgi?id=157514

Reviewed by Ryosuke Niwa.

* dom/Element.cpp:
(WebCore::Element::insertedInto):
(WebCore::Element::removedFrom):


Canonical link: https://commits.webkit.org/175671@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@200642 268f45cc-cd09-0410-ab3c-d52691b4dbfc